[package]
name = "mlsolver"
version = "0.1.0"
edition = "2018"
authors =["Saad Dahmani <sd.dahmani2000@gmail.com; s.dahmani@univ-bouira.dz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.peroxide]
version = "0.30.9"
default-features = false
features = ["O3"]
